Basic channel/user display

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,18 +5,20 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
+    "module": "es6",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es5",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "./src/types"
     ],
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "esModuleInterop": true
   }
 }
