--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,8 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "module": "esnext",
     "outDir": "../out-tsc/app",
-    "types": []
+    // "types": ["./types"]
   },
   "exclude": [
     "test.ts",
