--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "@types/ts3-nodejs-library": "^1.13.1",
     "core-js": "^2.5.4",
+    "ngx-socket-io": "^2.1.1",
     "rxjs": "~6.3.3",
     "ts3-nodejs-library": "^1.13.1",
     "tslib": "^1.9.0",
@@ -31,9 +32,9 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
