--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start-secure": "ng serve --ssl --ssl-key ../server.key  --ssl-cert ../server.crt --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
