--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@types/ts3-nodejs-library": "^1.13.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ngx-socket-io": "^2.1.1",
+    "ngx-socket-io": "^3.2.0",
+    "npm-check-updates": "^10.2.1",
     "rxjs": "~6.6.3",
     "ts3-nodejs-library": "^1.13.1",
     "tslib": "^1.14.1",
@@ -39,7 +40,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
