--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngx-socket-io": "^3.2.0",
+    "node-sass": "^4.14.1",
     "npm-check-updates": "^10.2.1",
     "rxjs": "~6.6.3",
     "ts3-nodejs-library": "^1.13.1",
@@ -39,7 +40,7 @@
     "@angular/language-service": "~10.2.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^14.14.8",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
