--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.8",
+    "@angular-devkit/build-angular": "^0.13.10",
+    "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "~10.2.3",
     "@angular/language-service": "~10.2.3",
     "@types/jasmine": "~2.8.8",
