--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@types/ts3-nodejs-library": "^1.13.1",
+    "chokidar": "^3.4.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngx-socket-io": "^3.2.0",
@@ -34,7 +35,7 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.10",
+    "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@angular/language-service": "~11.0.1",
